Project zipzip {
  database_type: 'PostgreSQL'
  Note: 'Zipzip 1차 공유 그룹 서버 데이터 모델. 애플리케이션에서 UUID를 생성하고 시간은 UTC timestamptz로 저장하며 JPA 엔티티에서는 java.time.Instant로 매핑한다. DBML이 표현하지 못하는 PostgreSQL partial/expression index는 postgresql-overrides.sql을 함께 적용한다.'
}

Enum shared_group_role {
  HOST [note: '공유 그룹을 만든 방장. 공유 그룹 삭제 권한을 가진다.']
  MEMBER [note: '초대 코드로 공유 그룹에 참여한 멤버.']
}

Table app_user {
  id uuid [pk, not null, note: '애플리케이션에서 생성하는 사용자 식별자']
  apple_subject varchar(255) [not null, unique, note: 'Apple 로그인으로 받은 변경되지 않는 사용자 식별자']
  display_name varchar(50) [not null, note: '공유 그룹 참여자와 콘텐츠 작성자 표시에 사용하는 사용자 이름. 탈퇴 시 탈퇴한 사용자로 갱신한다.']
  created_at timestamptz [not null, default: `now()`, note: '사용자 최초 등록 시각']
  updated_at timestamptz [not null, default: `now()`, note: '사용자 정보 마지막 수정 시각. 애플리케이션에서 갱신한다.']
  deleted_at timestamptz [note: 'Zipzip 서비스 탈퇴 시각. null이면 활성 사용자']

  checks {
    `char_length(btrim(display_name)) > 0` [name: 'chk_app_user__display_name_not_blank']
  }

  Note: 'Apple 로그인 후 서버에 등록된 사용자. 탈퇴 시 deleted_at을 기록하고 display_name을 탈퇴한 사용자로 갱신한다. 공유 콘텐츠의 작성자·생성자·업로더 표시는 탈퇴한 사용자로 대체한다. 재가입 복구를 위해 app_user 행은 물리 삭제하지 않는다. 동일한 Apple 계정으로 재가입하면 기존 행을 복구하되 과거 공유 그룹 멤버십은 자동 복구하지 않는다.'
}

Table api_idempotency_record {
  id uuid [pk, not null, note: '애플리케이션에서 생성하는 멱등성 처리 기록 식별자']
  scope varchar(100) [not null, note: '멱등성 키의 업무 범위. 사용자·그룹 등 요청을 구분하는 기준']
  idempotency_key uuid [not null, note: '클라이언트가 전달한 멱등성 키']
  http_method varchar(10) [not null, note: '요청 HTTP 메서드']
  api_path varchar(255) [not null, note: '멱등성 적용 API 경로']
  request_hash varchar(64) [not null, note: '동일 멱등성 키의 요청 본문 충돌을 판별하는 SHA-256 해시']
  status varchar(20) [not null, note: '처리 상태. PROCESSING 또는 COMPLETED']
  response_http_status int [note: '완료된 요청의 HTTP 응답 상태 코드. 처리 중이면 null']
  encrypted_response_body text [note: '완료된 요청의 암호화된 응답 본문. 처리 중이면 null']
  expires_at timestamptz [not null, note: '멱등성 기록 만료 시각. 만료 후 정리 배치가 삭제한다']
  created_at timestamptz [not null, default: `now()`, note: '처리 기록 생성 시각']
  updated_at timestamptz [not null, default: `now()`, note: '처리 상태 마지막 갱신 시각']

  indexes {
    (scope, idempotency_key, http_method, api_path) [unique, name: 'uk_api_idempotency_record__scope_key_method_path']
    expires_at [name: 'idx_api_idempotency_record__expires_at']
  }

  checks {
    `status in ('PROCESSING', 'COMPLETED')` [name: 'chk_api_idempotency_record__status']
    `(status = 'PROCESSING' and response_http_status is null and encrypted_response_body is null) or (status = 'COMPLETED' and response_http_status is not null and encrypted_response_body is not null)` [name: 'chk_api_idempotency_record__completed_response']
  }

  Note: '멱등성 헤더가 필요한 API의 처리 상태와 완료 응답을 보관한다. 동일한 scope, idempotency_key, HTTP 메서드, API 경로 조합은 하나만 존재할 수 있으며, 만료된 행은 정기적으로 물리 삭제한다.'
}

Table refresh_token {
  id uuid [pk, not null, note: '애플리케이션에서 생성하는 Refresh Token 행 식별자']
  app_user_id uuid [not null, note: 'Refresh Token을 소유한 사용자 식별자']
  token_hash varchar(255) [not null, unique, note: 'Refresh Token 원문의 해시값']
  token_family_id uuid [not null, note: '같은 로그인 세션에서 회전된 Refresh Token 계열 식별자']
  expires_at timestamptz [not null, note: 'Refresh Token 만료 시각']
  revoked_at timestamptz [note: '로그아웃, 회전 또는 재사용 탐지로 토큰을 폐기한 시각']
  replaced_by_refresh_token_id uuid [unique, note: '회전 후 발급된 다음 Refresh Token 행 식별자']
  created_at timestamptz [not null, default: `now()`, note: 'Refresh Token 발급 시각']
  updated_at timestamptz [not null, default: `now()`, note: 'Refresh Token 상태 마지막 수정 시각']

  indexes {
    (app_user_id, token_family_id) [name: 'idx_refresh_token__app_user_id_token_family_id']
    expires_at [name: 'idx_refresh_token__expires_at']
    revoked_at [name: 'idx_refresh_token__revoked_at']
  }

  checks {
    `expires_at > created_at` [name: 'chk_refresh_token__expires_after_created']
    `revoked_at is null or revoked_at >= created_at` [name: 'chk_refresh_token__revoked_after_created']
  }

  Note: '다중 로그인 세션과 Refresh Token 회전을 지원한다. 원문은 저장하지 않고 폐기 또는 만료 후 배치로 정리한다.'
}

Table invite_code_reservation {
  invite_code varchar(64) [pk, not null, note: '공유 그룹이 존재하는 동안 점유하는 공유 그룹 초대 코드']
  created_at timestamptz [not null, default: `now()`, note: '초대 코드 최초 예약 시각']

  checks {
    `char_length(btrim(invite_code)) > 0` [name: 'chk_invite_code_reservation__invite_code_not_blank']
  }

  Note: '초대 코드의 중복 점유를 방지하는 예약 테이블. 공유 그룹을 물리 삭제할 때 함께 삭제해 해당 초대 코드를 다시 사용할 수 있게 한다. 주요 업무 엔티티가 아니므로 UUID id와 updated_at을 두지 않는 표준 예외다.'
}

Table shared_group {
  id uuid [pk, not null, note: '애플리케이션에서 생성하는 공유 그룹 식별자']
  created_by_app_user_id uuid [not null, note: '공유 그룹을 최초 생성한 사용자 식별자']
  name varchar(100) [not null, note: '공유 탭과 공유 그룹 내부 상단에 표시하는 이름']
  invite_code varchar(64) [not null, unique, note: '공유 그룹 참여에 사용하는 고정 초대 코드']
  created_at timestamptz [not null, default: `now()`, note: '공유 그룹 생성 시각']
  updated_at timestamptz [not null, default: `now()`, note: '공유 그룹 정보 마지막 수정 시각']
  deleted_at timestamptz [note: '방장이 공유 그룹을 삭제한 시각. null이면 활성 공유 그룹']

  indexes {
    (created_by_app_user_id, deleted_at) [name: 'idx_shared_group__created_by_app_user_id_deleted_at']
    deleted_at [name: 'idx_shared_group__deleted_at']
  }

  checks {
    `char_length(btrim(name)) > 0` [name: 'chk_shared_group__name_not_blank']
    `char_length(btrim(invite_code)) > 0` [name: 'chk_shared_group__invite_code_not_blank']
  }

  Note: '공유 탭에 카드로 표시되는 최상위 공유 공간. 초대, 멤버십, 그룹 채팅, 공유집(앨범)의 조회 루트이다.'
}

Table shared_group_membership {
  id uuid [pk, not null, note: '애플리케이션에서 생성하는 공유 그룹 멤버십 식별자']
  shared_group_id uuid [not null, note: '참여한 공유 그룹 식별자']
  app_user_id uuid [not null, note: '공유 그룹에 참여한 사용자 식별자']
  role shared_group_role [not null, note: '공유 그룹 안에서 사용자의 방장 또는 멤버 역할']
  created_at timestamptz [not null, default: `now()`, note: '공유 그룹에 참여한 시각']
  updated_at timestamptz [not null, default: `now()`, note: '멤버십 정보 마지막 수정 시각']

  indexes {
    (shared_group_id, created_at) [name: 'idx_shared_group_membership__group_created']
    (app_user_id, created_at) [name: 'idx_shared_group_membership__user_created']
    (shared_group_id, app_user_id) [unique, name: 'uk_shared_group_membership__group_user']
    (shared_group_id, role) [name: 'idx_shared_group_membership__group_role']
  }

  Note: '사용자와 공유 그룹의 현재 참여 관계. 멤버 나가기 또는 Zipzip 서비스 탈퇴 시 MEMBER 행을 물리 삭제한다. 멤버십 행이 있고 상위 공유 그룹과 사용자가 모두 soft delete되지 않은 경우에만 활성 멤버십으로 판단한다. PostgreSQL DDL에서는 공유 그룹별 HOST 한 명 partial unique를 추가한다.'
}

Table shared_group_chat_message {
  id uuid [pk, not null, note: '애플리케이션에서 생성하는 그룹 채팅 메시지 식별자']
  shared_group_id uuid [not null, note: '메시지가 속한 공유 그룹 식별자']
  app_user_id uuid [not null, note: '메시지를 작성한 사용자 식별자']
  content varchar(1000) [not null, note: '그룹 채팅 메시지 본문. 최대 1,000자']
  created_at timestamptz [not null, default: `now()`, note: '메시지 작성 시각']
  updated_at timestamptz [not null, default: `now()`, note: '메시지 마지막 수정 시각']

  indexes {
    (shared_group_id, created_at, id) [name: 'idx_shared_group_chat_message__group_created_id']
    (app_user_id, created_at) [name: 'idx_shared_group_chat_message__app_user_id_created_at']
  }

  checks {
    `char_length(btrim(content)) > 0` [name: 'chk_shared_group_chat_message__content_not_blank']
  }

  Note: '공유 그룹 안의 일반 채팅 메시지. MVP는 created_at, id 커서를 사용하는 폴링 조회와 메시지 작성을 제공한다. 사용자 수정·삭제는 후속 범위다.'
}

Table shared_album {
  id uuid [pk, not null, note: '애플리케이션에서 생성하는 공유집(앨범) 식별자']
  shared_group_id uuid [not null, note: '공유집(앨범)이 속한 공유 그룹 식별자']
  created_by_app_user_id uuid [not null, note: '공유집(앨범)을 생성한 사용자이며 삭제 권한의 기준']
  name varchar(100) [not null, note: '공유 그룹 내부에 표시하는 공유집(앨범) 이름']
  created_at timestamptz [not null, default: `now()`, note: '공유집(앨범) 생성 시각']
  updated_at timestamptz [not null, default: `now()`, note: '공유집(앨범) 정보 마지막 수정 시각']
  deleted_at timestamptz [note: '공유집(앨범) 삭제 시각. null이면 활성 공유집(앨범)']

  indexes {
    (shared_group_id, deleted_at, created_at) [name: 'idx_shared_album__shared_group_id_deleted_at_created_at']
    (created_by_app_user_id, deleted_at) [name: 'idx_shared_album__created_by_app_user_id_deleted_at']
    deleted_at [name: 'idx_shared_album__deleted_at']
  }

  checks {
    `char_length(btrim(name)) > 0` [name: 'chk_shared_album__name_not_blank']
  }

  Note: '공유 그룹 참여자가 생성하는 공유집(앨범)이며 shared_album_photo를 통해 사진을 담는다. 사진 없이도 존재할 수 있으며 활성 멤버가 이름을 수정할 수 있다. 삭제는 생성자 또는 탈퇴한 생성자의 공유 그룹 방장이 할 수 있다.'
}

Table photo_upload_reservation {
  object_key varchar(500) [pk, not null, note: '발급된 업로드 presigned PUT URL의 대상 객체 키']
  shared_album_id uuid [not null, note: '업로드 URL을 발급받은 대상 공유집(앨범) 식별자']
  requested_by_app_user_id uuid [not null, note: '업로드 URL 발급을 요청한 사용자 식별자']
  expires_at timestamptz [not null, note: '예약 만료 시각. presigned PUT URL 만료 시각과 맞춘다']
  created_at timestamptz [not null, default: `now()`, note: '업로드 URL 발급 시각']

  indexes {
    shared_album_id [name: 'idx_photo_upload_reservation__shared_album_id']
    requested_by_app_user_id [name: 'idx_photo_upload_reservation__requested_by_app_user_id']
    expires_at [name: 'idx_photo_upload_reservation__expires_at']
  }

  Note: '사진 업로드 URL 발급(PHOTO-02)과 완료 등록(PHOTO-03) 사이를 잇는 예약 원장. 완료 등록은 objectKey에 대응하는 행이 요청 사용자·요청 경로 공유집(앨범)과 일치하고 만료되지 않았을 때만 photo 행을 생성하며, 성공하면 이 행을 물리 삭제한다. 만료된 미완료 행은 정기 스윕이 정리한다. 주요 업무 엔티티가 아니므로 UUID id와 updated_at을 두지 않는 표준 예외다.'
}

Table photo {
  id uuid [pk, not null, note: '애플리케이션에서 생성하는 사진 식별자']
  uploaded_by_app_user_id uuid [not null, note: '사진을 업로드한 사용자이며 원본 수정과 삭제 권한의 원칙적 기준']
  device_model varchar(100) [note: 'iOS가 EXIF에서 추출해 전달한 촬영 기기명. 없으면 null']
  original_object_key varchar(500) [not null, unique, note: 'OCI Object Storage 원본 이미지 객체 키. API가 조회 시점에 presigned GET URL을 발급하는 데 사용']
  thumbnail_object_key varchar(500) [note: '썸네일 이미지 객체 키. 비동기 생성 전에는 null']
  thumbnail_status varchar(20) [not null, note: '썸네일 생성 진행 상태. PENDING, READY, FAILED']
  taken_at timestamptz [note: 'iOS가 이미지 EXIF에서 추출해 전달했거나 사용자가 보정한 사진 촬영일시. 없으면 created_at을 표시와 정렬 기준으로 사용']
  latitude float [note: '촬영 위치 위도']
  longitude float [note: '촬영 위치 경도']
  location_name varchar(200) [note: '촬영 위치명']
  is_inferred boolean [not null, default: false, note: 'iOS 메타데이터 제안 UI로 위치정보를 추론해 채웠는지 여부']
  width int [note: '이미지 가로 픽셀']
  height int [note: '이미지 세로 픽셀']
  created_at timestamptz [not null, default: `now()`, note: '사진 등록 시각']
  updated_at timestamptz [not null, default: `now()`, note: '사진 정보 마지막 수정 시각']
  deleted_at timestamptz [note: '사진 삭제 시각. null이면 활성 사진']

  indexes {
    (uploaded_by_app_user_id, deleted_at) [name: 'idx_photo__uploaded_by_app_user_id_deleted_at']
    deleted_at [name: 'idx_photo__deleted_at']
  }

  checks {
    `thumbnail_status in ('PENDING', 'READY', 'FAILED')` [name: 'chk_photo__thumbnail_status']
    `thumbnail_status <> 'READY' or (thumbnail_object_key is not null and thumbnail_object_key !~ '^[[:space:]]*$')` [name: 'chk_photo__thumbnail_ready_object_key']
  }

  Note: '사진 원본 파일 참조 정보. 공유 그룹에 직접 속하지 않고 shared_album_photo를 통해서만 하나 이상의 공유집(앨범)에 속한다(공유 위계는 공유 그룹 > 공유집(앨범) > 사진이다). 원칙적으로 업로더가 수정·삭제하며, 업로더가 탈퇴한 경우 삭제는 공유 그룹 방장이 할 수 있다. 클라이언트는 presigned PUT URL로 원본을 Object Storage에 직접 업로드하고, 서버는 업로드 완료 등록 시점에 이 행을 생성한다. iOS가 이미지 EXIF에서 촬영일시와 위치정보를 추출해 전달하면 그대로 저장하며, 위치정보가 추론된 값이면 is_inferred를 true로 전달받는다. 썸네일은 등록 직후 서버가 비동기로 생성한다. 촬영일 우선 정렬용 coalesce 표현식 partial index는 postgresql-overrides.sql에 정의한다.'
}

Table shared_album_photo {
  id uuid [pk, not null, note: '애플리케이션에서 생성하는 앨범-사진 매핑 식별자']
  shared_album_id uuid [not null, note: '사진이 포함된 공유집(앨범) 식별자']
  photo_id uuid [not null, note: '공유집(앨범)에 포함된 사진 식별자']
  created_at timestamptz [not null, default: `now()`, note: '사진이 공유집(앨범)에 추가된 시각']
  updated_at timestamptz [not null, default: `now()`, note: '매핑 행 마지막 수정 시각']

  indexes {
    (shared_album_id, created_at) [name: 'idx_shared_album_photo__shared_album_id_created_at']
    photo_id [name: 'idx_shared_album_photo__photo_id']
    (shared_album_id, photo_id) [unique, name: 'uk_shared_album_photo__shared_album_id_photo_id']
  }

  Note: '사진과 공유집(앨범)의 N:M 소속 관계. 같은 사진을 여러 공유집(앨범)에 중복 없이 담을 수 있다. 사진은 항상 1개 이상의 매핑을 가져야 하며, 공유집(앨범) 삭제나 명시적 제거로 사진의 마지막 매핑이 없어지면 사진 원본도 함께 soft delete한다(고아 사진 방지).'
}

Table photo_like {
  id uuid [pk, not null, note: '애플리케이션에서 생성하는 사진 좋아요 식별자']
  photo_id uuid [not null, note: '좋아요 대상 사진 식별자']
  app_user_id uuid [not null, note: '좋아요를 누른 사용자 식별자']
  created_at timestamptz [not null, default: `now()`, note: '좋아요 생성 시각']
  updated_at timestamptz [not null, default: `now()`, note: '좋아요 행 마지막 수정 시각']

  indexes {
    (photo_id, app_user_id) [unique, name: 'uk_photo_like__photo_id_app_user_id']
    (app_user_id, created_at) [name: 'idx_photo_like__app_user_id_created_at']
  }

  Note: '사진별 단순 좋아요 상태. 활성 멤버이면서 해당 좋아요를 누른 사용자만 취소할 수 있고, 취소 또는 사용자 탈퇴 시 행을 물리 삭제한다.'
}

Table photo_comment {
  id uuid [pk, not null, note: '애플리케이션에서 생성하는 사진 댓글 식별자']
  photo_id uuid [not null, note: '댓글 대상 사진 식별자']
  app_user_id uuid [not null, note: '댓글 작성 사용자 식별자']
  content varchar(1000) [not null, note: '사진 댓글 본문. 최대 1,000자']
  created_at timestamptz [not null, default: `now()`, note: '댓글 작성 시각']
  updated_at timestamptz [not null, default: `now()`, note: '댓글 마지막 수정 시각']

  indexes {
    (photo_id, created_at) [name: 'idx_photo_comment__photo_id_created_at']
    (app_user_id, created_at) [name: 'idx_photo_comment__app_user_id_created_at']
  }

  checks {
    `char_length(btrim(content)) > 0` [name: 'chk_photo_comment__content_not_blank']
  }

  Note: '단일 사진에 달리는 댓글. 그룹 채팅 메시지는 shared_group_chat_message에 별도로 저장한다. MVP는 댓글 작성·조회만 제공하며 사용자 수정·삭제는 후속 범위다.'
}

Ref fk_refresh_token__app_user: app_user.id < refresh_token.app_user_id [delete: cascade, update: no action]
Ref fk_refresh_token__replaced_by: refresh_token.id - refresh_token.replaced_by_refresh_token_id [delete: set null, update: no action]

Ref fk_shared_group__invite_code_reservation: invite_code_reservation.invite_code - shared_group.invite_code [delete: restrict, update: no action]
Ref fk_shared_group__created_by_app_user: app_user.id < shared_group.created_by_app_user_id [delete: restrict, update: no action]
Ref fk_shared_group_membership__shared_group: shared_group.id < shared_group_membership.shared_group_id [delete: cascade, update: no action]
Ref fk_shared_group_membership__app_user: app_user.id < shared_group_membership.app_user_id [delete: restrict, update: no action]

Ref fk_shared_group_chat_message__shared_group: shared_group.id < shared_group_chat_message.shared_group_id [delete: cascade, update: no action]
Ref fk_shared_group_chat_message__app_user: app_user.id < shared_group_chat_message.app_user_id [delete: restrict, update: no action]

Ref fk_shared_album__shared_group: shared_group.id < shared_album.shared_group_id [delete: cascade, update: no action]
Ref fk_shared_album__created_by_app_user: app_user.id < shared_album.created_by_app_user_id [delete: restrict, update: no action]

Ref fk_photo_upload_reservation__shared_album: shared_album.id < photo_upload_reservation.shared_album_id [delete: cascade, update: no action]
Ref fk_photo_upload_reservation__requested_by_app_user: app_user.id < photo_upload_reservation.requested_by_app_user_id [delete: restrict, update: no action]

Ref fk_photo__uploaded_by_app_user: app_user.id < photo.uploaded_by_app_user_id [delete: restrict, update: no action]

Ref fk_shared_album_photo__shared_album: shared_album.id < shared_album_photo.shared_album_id [delete: cascade, update: no action]
Ref fk_shared_album_photo__photo: photo.id < shared_album_photo.photo_id [delete: cascade, update: no action]

Ref fk_photo_like__photo: photo.id < photo_like.photo_id [delete: cascade, update: no action]
Ref fk_photo_like__app_user: app_user.id < photo_like.app_user_id [delete: cascade, update: no action]

Ref fk_photo_comment__photo: photo.id < photo_comment.photo_id [delete: cascade, update: no action]
Ref fk_photo_comment__app_user: app_user.id < photo_comment.app_user_id [delete: restrict, update: no action]

TableGroup authentication [note: '사용자 인증과 세션'] {
  app_user
  refresh_token
}

TableGroup shared_group_domain [note: '공유 그룹, 참여 관계, 그룹 채팅'] {
  invite_code_reservation
  shared_group
  shared_group_membership
  shared_group_chat_message
}

TableGroup shared_content_domain [note: '공유집(앨범)과 사진 상호작용'] {
  shared_album
  photo_upload_reservation
  photo
  shared_album_photo
  photo_like
  photo_comment
}
